# chess-tables

./: .gitmodules  CMakeLists.txt  README.md  chess.c  main.c  node.c
include/chess-tables/: chess.h  node.h  piece.h
src/: CMakeLists.txt  chess.c  node.c  piece.c
test/: CMakeLists.txt  test_node.c  test_piece.c
